Sun Jan 25 19:42:31 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.cc sfidl-generator.cc sfidl-parser.cc: Put fully qualified
	name into the ChoiceValue data structure while parsing.

Sun Jan 25 08:38:36 2004  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: removed lots of old ad-hoc string conversion
	fucntions. replaced with varians of rename().
	refactored class and enum generation into different functions.
	generate class_init() in the implementation section, after all
	types have been defined. use NamespaceHelper.printable_form()
	which returns static strings that don't corrupt.
	lots of symbol name generation fixes.
	resolved namespace problems/hacks with NamespaceHelper.

	* sfidl-module.h: removed unused code.

	* sfidl-namespace.h, sfidl-namespace.cc:
	added printable_form() to return a constant c-string from
	printableForm().

Sun Jan 25 05:30:32 2004  Tim Janik  <timj@gtk.org>

	* sficxx.h: renamed value_set() and value_get() methods to
	value_set_TYPE() and value_get_TYPE(), depending on what TYPE
	they set/get. added set_boxed() method to Sequence. added
	c_ptr() and set_boxed() to Sequence (basically, because
	operator=() isn't inherited).
	added cxx_value_set_boxed_sequence(), cxx_value_get_boxed_sequence()
	cxx_value_set_boxed_record() and cxx_value_get_boxed_record().

	* sfidl-cxx.cc: adapt to get_value/set_value renames, changed
	generated implementation to operate on SfiRec and SfiSeq now.
	the boxed variants are taken care of by sfidl-module.cc.

	* sfidl-module.cc: fixed generic SfiRec pspec constructor.
	adapt to value_set/value_get renames.

	* sfiparams.[hc]: added sfi_pspec_rec_generic() for SfiRec
	idl types.

Sun Jan 25 04:41:23 2004  Tim Janik  <timj@gtk.org>

	* bse-plugin-generator.cc: convert to sfidl code generator
	factories. use "--module" factory.

	* sfidl-module.h: removed (disabled) class definition.

	* sfidl-module.cc: rewrote code generator into self-contained
	language-binding object.
